<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_insert_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!--ImageButton insert reviews !-->

    <ImageButton
        android:id="@+id/btBack_insert_review"
        android:layout_width="32dp"
        android:layout_height="34dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/ic_back">
    </ImageButton>

    <!--TextView insert reviews !-->

    <TextView
        android:id="@+id/fragment_insert_review_textView_name"
        android:layout_width="308dp"
        android:layout_height="46dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/fragment_insert_review_text_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="624dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_insert_review_textView_name"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/fragment_insert_review_textView_name"
        app:layout_constraintTop_toBottomOf="@+id/fragment_insert_review_textView_name"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="MissingConstraints">

        <!-- title !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_insert_review_text_input_name_review_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_review_text_input_title_review"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_review">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_insert_review_text_input_name_itinerary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHighlight="@color/purple_500"
                android:textCursorDrawable="@null"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- description !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_insert_review_text_description_itinerary_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fragment_review_text_input_description"
            android:imeOptions="actionDone"
            app:endIconMode="clear_text"
            app:counterMaxLength="150"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_insert_review_text_description_itinerary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:fontFamily="@font/open_sans"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColorHighlight="@color/green_200"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- vote !-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_insert_review_text_input_vote_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Long"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fragment_review_text_input_voteItinerary"
            app:endIconMode="clear_text"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/rating">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_insert_review_text_input_vote_itinerary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans"
                android:inputType="number"
                android:singleLine="true"
                android:textColorHighlight="@color/green_200"
                android:textCursorDrawable="@null"
                android:textSize="15.6sp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- TextView image !-->

        <TextView
            android:id="@+id/fragment_insert_review_textView_ImportImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="@string/fragment_detailsItinerary_text_importImages"
            android:lineSpacingExtra="34sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="145dp"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <!-- ImageView image !-->

            <ImageView
                android:id="@+id/fragment_review_imageView_ImportFirstImage"
                android:layout_width="113dp"
                android:layout_height="114dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_Insert_Image_textView_ImportImages"
                app:srcCompat="@drawable/ic_image_box" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="373dp"
            android:layout_height="99dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Button cancel !-->

            <Button
                android:id="@+id/fragment_review_button_cancel"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:minHeight="48dp"
                android:text="@string/fragment_review_button_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="normal"
                app:backgroundTint="#8668A136"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Button confermation !-->

            <Button
                android:id="@+id/fragment_review_button_confermation"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/fragment_review_button_confirmation"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="normal"
                app:backgroundTint="#8668A136"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

