<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- ImageButton "Back_home" !-->

    <ImageButton
        android:id="@+id/btBack_Home"
        android:layout_width="32dp"
        android:layout_height="34dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="413dp"
        android:layout_height="730dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp">

        <!-- TextView name app !-->

        <TextView
            android:id="@+id/activity_main_textView_nameApp"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/fragment_home_nameApp"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:columnCount="2"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <!-- Explore !-->

            <androidx.cardview.widget.CardView
                android:id="@+id/btExploreHome"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#87399F3D"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/explore" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/fragment_home_Explore"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Plan !-->

            <androidx.cardview.widget.CardView
                android:id="@+id/btPlanHome"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#87399F3D"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/plan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/fragment_home_Plan"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- LogOut !-->

            <androidx.cardview.widget.CardView
                android:id="@+id/btUscitaHome"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#87399F3D"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/fragment_home_LogOut"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:onClick="showAlerDialog"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Profile !-->

            <androidx.cardview.widget.CardView
                android:id="@+id/btProfileHome"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#87399F3D"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="97dp"
                        android:layout_height="92dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/fragment_home_Profile"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

